# spenditure

./: .gitignore  README.md  craco.config.js  package-lock.json  package.json
backend/: .env  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: .env  settings.py  urls.py
frontend/: package.json
frontend/src/: App.css
frontend/src/PlusJakartaSans-master/sources/: PlusJakartaSans-Italic.glyphs
frontend/src/components/: AboutUs.js  AccountMain.js  Main.js  RightNav.js  main.css
frontend/src/components/features/: data.js
frontend/src/components/footer/: footer.css
frontend/src/components/header/: Header.jsx
public/: index.html
spenditure-app/: package-lock.json
spenditure-app/.netlify/: state.json
spenditure-app/src/: App.js  index.css
spenditure-app/src/components/: Account.js  Updates.js  main.css
src/: App.css  App.js  index.css  index.js
src/components/: AboutUs.js  Home.js  LeftNav.js  Main.js  MobileNavMenu.jsx  RightNav.js  SignIn.js  Updates.js  main.css
src/components/features/: Feature.jsx  Features.jsx
src/components/footer/: Footer.jsx  footer.css
src/components/getFinance/: GetFinance.jsx  getFinance.css
src/components/header/: Header.jsx  header.css
src/components/landingPage/: LandingPage.css  LandingPage.js
src/components/navbar/: Navbar.jsx  navbar.css
src/components/security/: security.css
src/components/signUp/: SignUp.js
src/components/testimonials/: Testimonial.jsx  Testimonials.jsx  data.js
src/components/whatWeOffer/: Offers.jsx  WhatWeOffer.jsx
src/images/: site.webmanifest
(+10 files in other folders)
