[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = "This is the backend dev for the spenditure app"
authors = ["yuenfu001"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
