[tool.poetry]
name = "spenditure backend"
version = "0.1.0"
description = "This is the backend for the spenditure app"
authors = ["yuenfu001"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-filter = "^21.1"
dj-rest-auth = "^2.2.4"
django-allauth = "^0.50.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
